--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.0",
     "@eslint/js": "^9.9.0",
+    "@types/bun": "^1.1.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -30,8 +32,7 @@
     "react-router-dom": "^6.26.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "@types/bun": "^1.1.9"
+    "vite": "^5.4.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
